[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
derive_more = { version = "1.0.0", features = ["error", "from"] }
eyre = "0.6.12"
huparse = { path = "/home/quentin/projects/huparse" }
indoc = "2.0.5"
itertools = "0.13.0"
regex = "1.11.1"
thiserror = "2.0.3"
